--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* animation: App-logo-spin infinite 20s linear; */
+  height: 70px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 110px;
   padding: 20px;
   color: white;
 }
