--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+.body{
+  background-color: darkgrey;
+}
+
 .App {
   text-align: center;
+  background-color: darkgrey;
 }
 
 .App-logo {
@@ -23,6 +28,7 @@
 
 .App-intro {
   font-size: large;
+  height: 100%;
 }
 
 @keyframes App-logo-spin {
