--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .body{
   background-color: darkgrey;
+  background-image: url("https://picsum.photos/1000?random");
+  background-size: cover;
 }
 
 .App {
   text-align: center;
-  background-color: darkgrey;
+  /* background-color: dasrkgrey; */
 }
 
 .App-logo {
